✨feat: 設定画面に現在の状態を表示するように変更

--- a/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
@@ -1,4 +1,18 @@
-uiStyle(context=UIStyle): 
+uiStyle(context=UIStyle):
   system: System
   android: Android
   ios: iOS
+colorStyle(context=ColorStyle):
+  dynamicColor: DynamicColor
+  systemColor: SystemColor
+  blue: Blue
+  purple: Purple
+  green: Green
+  red: Red
+  pink: Pink
+  yellow: Yellow
+  orange: Orange
+themeMode(context=ThemeMode):
+  system: System
+  light: Light
+  dark: Dark
