✨feat: userパッケージに認証処理を追加

--- a/packages/features/setting/assets/i18n/settings_en.i18n.yaml
+++ b/packages/features/setting/assets/i18n/settings_en.i18n.yaml
@@ -25,3 +25,6 @@ accountPage:
     head: Other
     logout: Logout
     leave: Leave
+  leaveConfirmDialog:
+    title: Leave?
+    body: Are you sure you want to cancel your membership? \\Ўn this operation cannot be undone.
