--- a/packages/features/setting/assets/i18n/settings_ja.i18n.yaml
+++ b/packages/features/setting/assets/i18n/settings_ja.i18n.yaml
@@ -25,3 +25,6 @@ accountPage:
     head: その他
     logout: ログアウト
     leave: 退会
+  leaveConfirmDialog:
+    title: 退会しますか？
+    body: 本当に退会してもよろしいですか？\nこの操作は元に戻すことができません。
