🎨design: 未ログイン時にオンボード画面を表示するように変更

--- a/packages/features/user/assets/i18n/user_en.i18n.yaml
+++ b/packages/features/user/assets/i18n/user_en.i18n.yaml
@@ -1,2 +1,7 @@
 userPage: 
   title: Title
+onboardPage:
+  start: Start
+  startCaption: For first-time users, click here
+  signInWithGoogle: Sign in with Google
+  signInWithApple: Sign in with Apple
