--- a/packages/features/user/assets/i18n/user_ja.i18n.yaml
+++ b/packages/features/user/assets/i18n/user_ja.i18n.yaml
@@ -1,2 +1,7 @@
 userPage: 
   title: タイトル
+onboardPage:
+  start: はじめる
+  startCaption: はじめての方はこちら
+  signInWithGoogle: Googleアカウントでログイン
+  signInWithApple: Appleアカウントでログイン
