✨feat: エラー機能追加
- 認証時のエラーをErrorViewで表示するように変更

--- a/packages/cores/error/assets/i18n/error_ja.i18n.yaml
+++ b/packages/cores/error/assets/i18n/error_ja.i18n.yaml
@@ -1,2 +1,6 @@
 errorPage:
   title: エラー
+message:
+  impossibleOperation:
+    notAuth: 認証済でないため操作が許可されていません
+    notLinked: アカウントが連携されていないため解除出来ません
