🎨design: GridViewとの切り替えを追加

--- a/packages/features/sample_list/assets/i18n/sampleList_en.i18n.yaml
+++ b/packages/features/sample_list/assets/i18n/sampleList_en.i18n.yaml
@@ -1,6 +1,10 @@
 sampleListPage: 
   title: Title
+  viewerLayoutType: Layout type
 sampleListSortKey(context=SampleListSortKey):
   createdAt: Created at
   name: Name
   price: Price
+viewerLayoutType(context=ViewerLayoutType):
+  list: List
+  grid: Grid
