🎨design: GridViewとの切り替えを追加

--- a/packages/features/sample_list/assets/i18n/sampleList_en.i18n.yaml
+++ b/packages/features/sample_list/assets/i18n/sampleList_en.i18n.yaml
@@ -1,5 +1,5 @@
 sampleListPage: 
-  title: Title
+  title: List Sample
   viewerLayoutType: Layout type
 sampleListSortKey(context=SampleListSortKey):
   createdAt: Created at
