--- a/packages/features/sample_list/assets/i18n/sampleList_ja.i18n.yaml
+++ b/packages/features/sample_list/assets/i18n/sampleList_ja.i18n.yaml
@@ -1,5 +1,5 @@
 sampleListPage: 
-  title: タイトル
+  title: リスト表示サンプル
   viewerLayoutType: 表示形式
 sampleListSortKey(context=SampleListSortKey):
   createdAt: 作成日時
