--- a/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
@@ -16,3 +16,6 @@ themeMode(context=ThemeMode):
   system: System
   light: Light
   dark: Dark
+viewLayout(context=ViewLayout):
+  grid: Grid
+  list: List
