--- a/packages/cores/designsystem/assets/i18n/designsystem_ja.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_ja.i18n.yaml
@@ -16,3 +16,6 @@ themeMode(context=ThemeMode):
   system: システムテーマ
   light: ライトテーマ
   dark: ダークテーマ
+viewLayout(context=ViewLayout):
+  grid: グリッド表示
+  list: リスト表示
