♻️refactor: 表示形式の文言定義場所を変更

--- a/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
@@ -16,6 +16,8 @@ themeMode(context=ThemeMode):
   system: System
   light: Light
   dark: Dark
-viewLayout(context=ViewLayout):
-  grid: Grid
-  list: List
+viewLayout:
+  name: Layout
+  typeName(context=ViewLayout):
+    grid: Grid
+    list: List
