♻️refactor: 通貨を言語ファイルで管理するように変更

--- a/packages/features/goods/assets/i18n/goods_ja.i18n.yaml
+++ b/packages/features/goods/assets/i18n/goods_ja.i18n.yaml
@@ -1,6 +1,7 @@
 goodsPage:
   title: 商品一覧
   layout: 表示形式
+  price: "${price: currency}"
 goodsSortKey(context=GoodsSortKey):
   createdAt: 作成日時
   name: 商品名
