♻️refactor: ThemeColorの選択を小規模サンプルを基に修正

--- a/packages/cores/designsystem/assets/i18n/designsystem_ja.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_ja.i18n.yaml
@@ -2,7 +2,7 @@ uiStyle(context=UIStyle):
   system: システム設定
   android: Android
   ios: iOS
-colorStyle(context=ColorStyle):
+themeColor(context=ThemeColor):
   dynamicColor: ダイナミックカラー
   systemColor: システムカラー
   blue: ブルー
