--- a/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
@@ -2,7 +2,7 @@ uiStyle(context=UIStyle):
   system: System
   android: Android
   ios: iOS
-colorStyle(context=ColorStyle):
+themeColor(context=ThemeColor):
   dynamicColor: DynamicColor
   systemColor: SystemColor
   blue: Blue
