♻️refactor: ThemeColorの選択を小規模サンプルを基に修正

--- a/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_en.i18n.yaml
@@ -4,7 +4,7 @@ uiStyle(context=UIStyle):
   ios: iOS
 themeColor(context=ThemeColor):
   dynamicColor: DynamicColor
-  systemColor: SystemColor
+  appColor: SystemColor
   blue: Blue
   purple: Purple
   green: Green
