--- a/packages/cores/designsystem/assets/i18n/designsystem_ja.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_ja.i18n.yaml
@@ -4,7 +4,7 @@ uiStyle(context=UIStyle):
   ios: iOS
 themeColor(context=ThemeColor):
   dynamicColor: ダイナミックカラー
-  systemColor: システムカラー
+  appColor: システムカラー
   blue: ブルー
   purple: パープル
   green: グリーン
