--- a/packages/features/goods/assets/i18n/goods_en.i18n.yaml
+++ b/packages/features/goods/assets/i18n/goods_en.i18n.yaml
@@ -1,7 +1,7 @@
 goodsPage: 
   title: Goods
   layout: Layout
-  price: "${price: currency}"
+  price: "${price: simpleCurrency}"
 goodsSortKey(context=GoodsSortKey):
   createdAt: Created at
   name: Name
