--- a/packages/features/goods/assets/i18n/goods_ja.i18n.yaml
+++ b/packages/features/goods/assets/i18n/goods_ja.i18n.yaml
@@ -1,7 +1,7 @@
 goodsPage:
   title: 商品一覧
   layout: 表示形式
-  price: "${price: currency}"
+  price: "${price: simpleCurrency}"
 goodsSortKey(context=GoodsSortKey):
   createdAt: 作成日時
   name: 商品名
