--- a/packages/cores/designsystem/assets/i18n/designsystem_ja.i18n.yaml
+++ b/packages/cores/designsystem/assets/i18n/designsystem_ja.i18n.yaml
@@ -25,4 +25,8 @@ sortOrder(context=SortOrder):
   asc: 昇順
   desc: 降順
 appUpdate:
+  updatePossible:
+    message: 新しいバージョンが公開されています。\nアップデートを行うと、新しい機能をご利用いただけます。\nアップデートを行いますか？
+  forceUpdate:
+    message: ご利用のバージョンは現在ご利用出来ません。\nストアから新しいバージョンをご利用下さい。
   navigateStore: ストアを開く
